--- a/mediaquery.css
+++ b/mediaquery.css
@@ -13,7 +13,7 @@
         position: relative;
         width: 40px;
         height: 40px;
-        background: url(./assets/toggle.png);
+        background: url(./images/toggle.png);
         background-size: 30px;
         background-repeat: no-repeat;
         background-position: center;
@@ -21,7 +21,7 @@
     }
     
     .menuToggle.active {
-        background: url(./assets/close.png);
+        background: url(./images/close.png);
         background-size: 25px;
         background-repeat: no-repeat;
         background-position: center;
